# DrawLots

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: PRD.md  桌面应用使用指南.md
icons/: icon.icns
scripts/: data.js  draw.js  main.js  storage-adapter.js  storage-sync.js  ui.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
styles/: animations.css  components.css  main.css
tools/: prepare-static.js  run-tauri-dev.js
