[package]
name = "drawlots_tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "drawlots_tauri"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "drawlots_tauri"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [
    "dialog-message",
    "shell-open"
] }
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
